add targeted coupons with category/product scope and capped % type